{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 56,
  "lineage": "ef155ec8-3aa6-831d-51df-4af098425974",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "DBServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ecb62995f68bb549",
            "arn": "arn:aws:ec2:us-east-1:891377083606:instance/i-0eee9dcabb6a29bd9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eee9dcabb6a29bd9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-08366359671635e74"
              }
            ],
            "primary_network_interface_id": "eni-08366359671635e74",
            "private_dns": "ip-172-31-26-189.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.26.189",
            "public_dns": "ec2-204-236-208-113.compute-1.amazonaws.com",
            "public_ip": "204.236.208.113",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b3b8755a00d13179",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "all-demo-lamp",
              "db-demo-lamp",
              "ssh-demo-lamp"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b402f36260135330",
            "tags": {
              "Name": "DBServer"
            },
            "tags_all": {
              "Name": "DBServer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-07cd60d6af0eb48f5",
              "sg-0a26bacb9e5938c47",
              "sg-0fbd3ace2f8bc7d21"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377083606",
            "id": "i-0eee9dcabb6a29bd9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.all",
            "aws_security_group.db",
            "aws_security_group.ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ServidorWeb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ecb62995f68bb549",
            "arn": "arn:aws:ec2:us-east-1:891377083606:instance/i-0eec7c73afd3a30a3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eec7c73afd3a30a3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0cbe83b91046aa782"
              }
            ],
            "primary_network_interface_id": "eni-0cbe83b91046aa782",
            "private_dns": "ip-172-31-25-152.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.25.152",
            "public_dns": "ec2-54-144-123-181.compute-1.amazonaws.com",
            "public_ip": "54.144.123.181",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0074c18eb1118ed63",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "all-demo-lamp",
              "http-demo-lamp",
              "ssh-demo-lamp",
              "wsmysql-demo-lamp"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b402f36260135330",
            "tags": {
              "Name": "ServidorWeb"
            },
            "tags_all": {
              "Name": "ServidorWeb"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0065fc39743c79b27",
              "sg-076c5f2487eda37fc",
              "sg-0a26bacb9e5938c47",
              "sg-0fbd3ace2f8bc7d21"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377083606",
            "id": "i-0eec7c73afd3a30a3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.all",
            "aws_security_group.http",
            "aws_security_group.ssh",
            "aws_security_group.wsmysql"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377083606:security-group/sg-0fbd3ace2f8bc7d21",
            "description": "Allow All Egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fbd3ace2f8bc7d21",
            "ingress": [],
            "name": "all-demo-lamp",
            "name_prefix": "",
            "owner_id": "891377083606",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00c551cb5f0de9a0c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377083606",
            "id": "sg-0fbd3ace2f8bc7d21",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377083606:security-group/sg-07cd60d6af0eb48f5",
            "description": "Allow DB ingress traffic",
            "egress": [],
            "id": "sg-07cd60d6af0eb48f5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0065fc39743c79b27"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db-demo-lamp",
            "name_prefix": "",
            "owner_id": "891377083606",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00c551cb5f0de9a0c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377083606",
            "id": "sg-07cd60d6af0eb48f5",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377083606:security-group/sg-076c5f2487eda37fc",
            "description": "Allow Http traffic",
            "egress": [],
            "id": "sg-076c5f2487eda37fc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http-demo-lamp",
            "name_prefix": "",
            "owner_id": "891377083606",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00c551cb5f0de9a0c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377083606",
            "id": "sg-076c5f2487eda37fc",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377083606:security-group/sg-0a26bacb9e5938c47",
            "description": "Allow SSH traffic",
            "egress": [],
            "id": "sg-0a26bacb9e5938c47",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-demo-lamp",
            "name_prefix": "",
            "owner_id": "891377083606",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00c551cb5f0de9a0c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377083606",
            "id": "sg-0a26bacb9e5938c47",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wsmysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377083606:security-group/sg-0065fc39743c79b27",
            "description": "Identify Web Server connect to db",
            "egress": [],
            "id": "sg-0065fc39743c79b27",
            "ingress": [],
            "name": "wsmysql-demo-lamp",
            "name_prefix": "",
            "owner_id": "891377083606",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00c551cb5f0de9a0c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377083606",
            "id": "sg-0065fc39743c79b27",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377083606:security-group-rule/sgr-0493771aa6b956db6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0493771aa6b956db6",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0fbd3ace2f8bc7d21",
            "security_group_rule_id": "sgr-0493771aa6b956db6",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377083606",
            "id": "sgr-0493771aa6b956db6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.all"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377083606:security-group-rule/sgr-025ac9bff6325251e",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-025ac9bff6325251e",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0065fc39743c79b27",
            "region": "us-east-1",
            "security_group_id": "sg-07cd60d6af0eb48f5",
            "security_group_rule_id": "sgr-025ac9bff6325251e",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377083606",
            "id": "sgr-025ac9bff6325251e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.db",
            "aws_security_group.wsmysql"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377083606:security-group-rule/sgr-0715af8eb7ab78533",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0715af8eb7ab78533",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-076c5f2487eda37fc",
            "security_group_rule_id": "sgr-0715af8eb7ab78533",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377083606",
            "id": "sgr-0715af8eb7ab78533",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.http"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377083606:security-group-rule/sgr-02be64ed541d63fc4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-02be64ed541d63fc4",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0a26bacb9e5938c47",
            "security_group_rule_id": "sgr-02be64ed541d63fc4",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377083606",
            "id": "sgr-02be64ed541d63fc4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ssh"
          ]
        }
      ]
    }
  ]
}